--- a/covid/index.html
+++ b/covid/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>LiveStories COVID-19 Growth Dashboard</title>
+    <title>LiveStories COVID-19 Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="css/covid.css"/>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
