Added more content and updated home page

--- a/covid-center/index.html
+++ b/covid-center/index.html
@@ -34,9 +34,22 @@
             
                
                 <div class="textmain">
-                    <p>Click on the menu in the left to see details about a topic.</p>
-                </div>
+			<h3>COVID Center - Find all information related to the coronavirus</h3>
+                	<p>We are responding to the spread of a respiratory illness caused by a novel coronavirus (COVID-19) first identified in Wuhan, Hubei Province, China. Cases of COVID-19 are also being reported internationally and in the United States.</p>
+			<p>This website brings together all the relevant information about the virus, it's impact on our community thus far, and our response. The site also provides supporting materials to help you to cope with this virus.
+			<br/>
+			<p><b>Protect yourself with 4 tips</b></p>
+			<div style="text-align: center; padding-bottom: 20px;">
+				<div style="display: inline-block; padding: 0 10px;"><img src="https://s3-us-west-2.amazonaws.com/ls-production-usermedia/4bdc8e985e6111eaa6280242ac110004_modified.jpg"  height="300px"/></div>
+				<div style="display: inline-block; padding: 0 10px;"><img src="https://s3-us-west-2.amazonaws.com/ls-production-usermedia/763ebb965e6d11eaba4e0242ac110004_modified.jpg"  height="300px"/></div>
+			</div>
 
+			<div style="text-align: center;">
+				<div style="display: inline-block; padding: 0 10px;"><img src="https://s3-us-west-2.amazonaws.com/ls-production-usermedia/74e3e14c5e6111eaba4e0242ac110004_modified.jpg"  height="300px"/></div>
+				<div style="display: inline-block; padding: 0 10px;"><img src="https://s3-us-west-2.amazonaws.com/ls-production-usermedia/6a70f5105e6111eab7eb0242ac110004_modified.jpg"  height="300px"/></div>
+			</div>
+                </div>
+		
 
             </div>
 
